# rest-example

./: LICENSE  README.md  rest-example.cabal
src/: Client.hs  Main.hs  Server.hs
