name:                rest-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nyirog/rest-example#readme
license:             BSD3
license-file:        LICENSE
author:              Nyiro Gergo
maintainer:          gergo.nyiro@gmail.com
copyright:           2018 Nyiro Gergo
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rest-server
  hs-source-dirs:      src
  main-is:             Server.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,scotty
                      ,aeson
                      ,containers
                      ,http-types
                      ,stm
                      ,data-default-class
                      ,mtl
                      ,text
                      ,transformers
                      ,wai-extra

executable rest-client
  hs-source-dirs:      src
  main-is:             Client.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,text
                      ,aeson
                      ,lens
                      ,lens-aeson
                      ,wreq
                      ,http-client
                      ,bytestring

executable rest-lens
  hs-source-dirs:      src
  main-is:             Lens.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,text
                      ,aeson
                      ,lens
                      ,lens-aeson
                      ,bytestring
